# bazel-torch-tensorrt

./: BUILD  MODULE.bazel  README.md  dummy_torch_tensorrt.py  requirements_lock_linux_x86_64.txt
