"""
Main module for bazel-torch-tensorrt project
"""
module(
    name = "bazel-torch-tensorrt",
    version = "0.0.0",
)

# Python
bazel_dep(name = "rules_python", version = "1.3.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11.9", is_default = True)
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "python_deps",
    python_version = "3.11",
    requirements_by_platform = {
        "requirements_lock_linux_x86_64.txt": "linux_x86_64",
    },
)
use_repo(pip, "python_deps")
